<resources>
    <string name="app_name">NasaPictureOfTheDay</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Search in Wikipedia</string>
    <string name="wiki_helper_text">Search this in wikipedia</string>
    <string name="click_to_hide">Click here to hide</string>
    <string name="favourite">favourite</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="Choose_theme">Choose theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="yellow">Yellow</string>
    <string name="Blue">Blue</string>
    <string name="Fancy">Fancy</string>
    <string name="Earth">Earth</string>
    <string name="Mars">Mars</string>
    <string name="info">info</string>
    <string name="show_description">Show description</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>

    </string-array>
    <string-array name="years">
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
    </string-array>
</resources>