<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/main_view_padding"
            android:paddingEnd="@dimen/main_view_padding"
            app:layoutDescription="@xml/motion_scene">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/wiki_button"
                style="@style/WikiButtonStyle"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/input_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/input_layout"
                app:srcCompat="@drawable/ic_wikipedia" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout"
                style="@style/wiki_search_layout_style"
                app:layout_constraintBottom_toTopOf="@+id/image_view"
                app:layout_constraintStart_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.koshake1.nasapictureoftheday.utils.EquilateralImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/photo_of_the_day_stub"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_no_photo_vector" />

            <TextView
                android:id="@+id/title_view"
                style="@style/TextViewStyle"
                app:layout_constraintBottom_toBottomOf="@+id/image_view"
                app:layout_constraintEnd_toStartOf="@+id/image_view" />

            <TextView
                android:id="@+id/data_view"
                style="@style/TextViewStyle"
                app:layout_constraintTop_toTopOf="@+id/image_view"
                app:layout_constraintStart_toEndOf="parent" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true"
                android:layout_marginTop="@dimen/chip_group_margin"
                android:layout_marginBottom="@dimen/chip_group_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_view">

                <com.google.android.material.chip.Chip
                    style="@style/MyChipChoiceStyle"
                    android:id="@+id/chipToday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today" />

                <com.google.android.material.chip.Chip
                    style="@style/MyChipChoiceStyle"
                    android:id="@+id/chipYesterday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yesterday" />

            </com.google.android.material.chip.ChipGroup>

        </androidx.constraintlayout.motion.widget.MotionLayout>
    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/bottom_sheet_layout" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        style="@style/app_bar_style_main"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>